# bin2ea

./: CMakeLists.txt  README.md  main.cpp
lib/: byte_pack.h  hex_convert.h
util/: args.cpp  args.h
